added a TODO comment for new login component

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,6 +22,7 @@ const { title } = Astro.props;
 					<div class="flex-1">
 						<a class="btn btn-ghost normal-case text-xl" href="/">Astro</a>
 					</div>
+					<!-- TODO add piece that shows the signin lnk if user si not logged in if the user is logged in don't show it and keep it in the drop down -->
 					<div class="flex-none">
 						<div class="dropdown dropdown-end">
 							<label tabindex="0" class="btn btn-ghost btn-circle">
