Refactor Reviews component and add empty div in dashboard page

--- a/src/pages/dashboard.astro
+++ b/src/pages/dashboard.astro
@@ -15,5 +15,8 @@ const { email } = Astro.locals;
                 </form>
             </div>
         </div>
+        <div class="mb-2">
+
+        </div>
     </div>
 </Layout>
