--- a/src/pages/dashboard.astro
+++ b/src/pages/dashboard.astro
@@ -1,10 +1,11 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import Review from "../components/Review";
 const { email } = Astro.locals as { email: string };
 
 ---
 <Layout title="dashboard">
-    <div class="hero min-h-screen" style="background-image: url(https://daisyui.com/images/stock/photo-1507358522600-9f71e620c44e.jpg);">
+    <div class="hero min-h-screen">
         <div class="hero-overlay bg-opacity-60"></div>
         <div class="hero-content text-center text-neutral-content">
             <div class="max-w-md">
@@ -13,7 +14,9 @@ const { email } = Astro.locals as { email: string };
                 <form class="btn btn-primary" action="/api/auth/signout">
                     <button type="submit">Sign out</button>
                 </form>
-                          
+                <div class="grid grid-cols-1 gap-4 mt-5">
+                    <Review />
+                </div>
             </div>
         </div>
     </div>
