--- a/src/pages/dashboard.astro
+++ b/src/pages/dashboard.astro
@@ -5,7 +5,8 @@ const { email } = Astro.locals as { email: string };
 
 ---
 <Layout title="dashboard">
-    <div class="hero min-h-screen" style="background-image: url(https://daisyui.com/images/stock/photo-1507358522600-9f71e620c44e.jpg);">
+    <header>
+        <div class="hero min-h-screen" style="background-image: url(https://daisyui.com/images/stock/photo-1507358522600-9f71e620c44e.jpg);">
         <div class="hero-overlay bg-opacity-60"></div>
         <div class="hero-content text-center text-neutral-content">
             <div class="max-w-md">
@@ -14,8 +15,9 @@ const { email } = Astro.locals as { email: string };
                 <form class="btn btn-primary" action="/api/auth/signout">
                     <button type="submit">Sign out</button>
                 </form>
-               
+            </div>
             </div>
         </div>
-    </div>
+    </header>
+    
 </Layout>
