--- a/src/pages/dashboard.astro
+++ b/src/pages/dashboard.astro
@@ -23,6 +23,6 @@ const {data, error} = await supabase
         </div>
     </header>
     <main>
-        
+        <p class="m-6 text-center">Hello World</p>
     </main>
 </Layout>
